manifests/pihole-wireguard/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
  tls:
    - secretName: pihole-tls
      hosts:
        - pihole.lan.ccrow.org
  rules:
  - host: pihole.lan.ccrow.org
    http:
      paths:
      - pathType: Prefix 
        path: "/admin"
        backend:
          service:
            name: pihole-ui-svc
            port:
              number: 80
